# excalia-autovote-new

./: .env  .env.example  README.md  pyproject.toml  run.py
src/excalia_autovote/: main.py
