[project]
name = "excalia-autovote"
version = "0.1.0"
description = ""
authors = [
    {name = "WallansDev",email = "timothe.vaquie1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "seleniumbase (>=4.45.8,<5.0.0)"
]

[tool.poetry]
packages = [{include = "excalia_autovote", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
